[package]
name = "tagge_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.31"
git2 = "0.20.2"
miette = { version = "7.6.0", features = ["fancy"] }
octocrab = "0.44.1"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
