[package]
name = "tagge_rs"
version = "0.1.0"
edition = "2024"

# `opt-level = "s"` may be useful in the future as it significantly reduces binary size.
# We could then use the `#[optimize(speed)]` attribute for spot optimizations.
# Unfortunately, that attribute currently doesn't work on intrinsics such as memset.
[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a seperate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
futures = "0.3.32"
git2 = "0.20.4"
miette = { version = "7.6.0", features = ["fancy"] }
octocrab = "0.50.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
